Criado através do Colab

--- a/Data_driven_insights.ipynb
+++ b/Data_driven_insights.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO0RZusagQrhU54KHNrj1ai",
+      "authorship_tag": "ABX9TyP6tYNIjdiVjijqw3wOA6wG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -557,7 +557,7 @@
         "#a estrutura mostrou que o tempo medio tela e 3.99\n",
         "\n",
         "\n",
-        "#o for fooi ultilizado para a soma dos 5 primeiros numeros\n",
+        "#o for foi ultilizado para a soma dos 5 primeiros numeros\n",
         "soma = 0\n",
         "lista = list(df[coluna_numerica][:5])\n",
         "for n in lista:\n",
@@ -822,7 +822,7 @@
       "cell_type": "code",
       "source": [
         "#no gráfico de linhas podemos analisar que de forma visual o quanto e descrepante o tempo de tela para recreação e para fins educativos\n",
-        "#no graficos de barra mostrou que o genero das criancas meninos/meninas tem uma pequena diferenca na quantidade,e que umpequeno grupo faz um uso de tempo aceitavel de tela\n",
+        "#no graficos de barra mostrou que o genero das criancas meninos/meninas tem uma pequena diferenca na quantidade,e que um pequeno grupo faz um uso de tempo aceitavel de tela\n",
         "#o grafigo numérico mostra que mesmo usando mais de 10 horas de tela por dia nem sempre e para fins educacionais"
       ],
       "metadata": {
@@ -834,7 +834,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "nesse projeto 'Indian_Kids_Screen_Tim.csv pude explorar os dados de tempo de tela de crianças indianas,foi possível notar que o tempo de tela excede o limite adequado,essas crianças são da area urbana,que por causa do tempo excessivo de tela,algumas tem o tempo de sono comprometido,e que algumas até desenvolveu ansiedade,obsevei que a maioria são meninos,porém o tempo de tela e nedio igual para ambas partes,mesmo chegando a mais de 9 horas de tela,o tempo para fins educacional e extremamente baixo,sem muito aproveitamento educativo."
+        "nesse projeto 'Indian_Kids_Screen_Tim.csv pude explorar os dados de tempo de tela de crianças indianas,foi possível notar que o tempo de tela excede o limite adequado,essas crianças são da area urbana e por ter acesso a internet e eletricidade facilita o uso,que por causa do tempo excessivo de tela,algumas tem o tempo de sono comprometido,e que algumas até desenvolveu ansiedade,obsevei que a maioria são meninos,porém o tempo de tela e medio igual para ambas partes,mesmo chegando a mais de 9 horas de tela,o tempo para fins educacional e extremamente baixo,sem muito aproveitamento educativo."
       ],
       "metadata": {
         "id": "Nmx-LIpd-tCK"
